1.6.1
---

- Fix printing of largefile offsets in remote control interface.

1.6.0
---
- small things inside that I forgot to mention
- some new commands for remote control interface:
  - SCAN
  - SAMPLE
  - EQFILE
  - SHOWEQ
- added --keep-open command line flag (for remote control)
- fixed equalizer file parsing to really handle comment lines as example file suggests
- more elaborate detection of UTF-8 locale, also --utf8 switch to force it
- added --fuzzy to enable inexact seeking (see below)
- added --index-size parameter for tuning accurate frame seek index
- enabling largefile support via configure
- libmpg123 11.0.11:
  - added mpg123_geteq(), mpg123_tell_stream() and mpg123_getstate()
  - API cleanup (take const char* for mpg123_open())
  - calm down complainling (C++) compilers by completing the mpg123_channels enum
  - fixed several possible crashes when user provides NULLs where it isn't appropriate
  - workaround for frames that fail decoding (bad frame body, missing bit reservoir): fill up with silence
    That also fixes seeking issues related to bad frames since now the fixed relation between frame and sample offsets is restored.
  - Finally realized what that the resampling code for integer math (generic_nofpu) was just incomplete!
    Now it works, using the defined integer multiplication.
  - Detect UTF-8 in ICY conversion (instead of just assuming CP-1252, provided by Torsten Glaser).
  - Prevent ugly noise when the bit reservoir is not fully there (p.ex. ignorantly cut mp3 files).
    Concerned frames are silenced, but reservoir for following frames is kept.
    Thanks to Patrick Dehne for the investigation and patch!
  - New option for fuzzy seeking; trading sample accuracy for speed.
    With that option, seeks positions are guessed using mean framesize or the Xing VBR TOC is used.
  - Feeder streams work with seek index now.
  - Seek frame index is runtime tunable.
  - more caution with alignment issues for varying library users